# AI-Discord-Dialogue-Generator

./: README.md  agent_tools.py  agents.py  degen_trader_agent.py  discord_agent.py  discord_qa-agent.py  docker-compose.yaml  prompt.py  pyproject.toml  schemas.py
Data/: 💬｜chat_page_1.csv  💬｜chat_page_2.csv  💬｜chat_page_3.csv  💬｜chat_page_4.csv  💬｜chat_page_5.csv
